--- a/www/index.html
+++ b/www/index.html
@@ -67,17 +67,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <style is="custom-style">
         paper-toolbar.custom {
-            --paper-toolbar-background: green;
+            --paper-toolbar-background: var(--paper-green-700);
         }
 
         paper-spinner.multi {
             position: absolute;
-            margin-left: 75%;
-            margin-top: 5%;
+            margin-left: 50%;
+            margin-top: 50%;
             z-index: 1000;
         }
-    </style>
 
+        paper-fab {
+            --paper-fab-background: var(--paper-green-700);
+            z-index: 1000;
+            position: absolute;
+            bottom: 5%;
+        }
+
+    </style>
 </head>
 
 <body>
@@ -86,10 +93,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <script type="text/javascript" charset="utf-8">
 
     document.addEventListener('WebComponentsReady', function () {
-        var button = document.querySelector('paper-button');
 
-        button.addEventListener('click', function () {
-            var spinner = document.querySelector('paper-spinner');
+        var gMap          = document.querySelector('google-map');
+        var refreshButton = document.getElementById('refreshButton');
+
+        gMap.addEventListener('google-map-ready', function (e) {
+            gMap.hidden = true;
+        });
+
+        refreshButton.hidden = true;
+
+        var button = document.getElementById('button_find_my_bar');
+
+        button.addEventListener('click', function (e) {
+            var spinner    = document.querySelector('paper-spinner');
             spinner.active = true;
 
             var options = {
@@ -103,66 +120,78 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         function geolocationError(error) {
             console.warn('ERROR(' + error.code + '): ' + error.message);
 
-            var toast = document.querySelector('paper-toast');
-            toast.text = 'something went wrong with your geolocation, please try to activate it or authorize the app and retry :)';
+            var toast      = document.querySelector('paper-toast');
+            toast.text     = 'something went wrong with your geolocation, please try to activate it or authorize the app and retry :)';
             toast.duration = 5000;
             toast.open();
         }
 
         function geolocationSuccess(position) {
 
-            var spinner = document.querySelector('paper-spinner');
-            spinner.active = false;
+            var spinner       = document.querySelector('paper-spinner');
+            var gMap          = document.querySelector('google-map');
+            var crd           = position.coords;
+            var refreshButton = document.getElementById('refreshButton');
+            var button        = document.getElementById('button_find_my_bar');
 
-            var crd = position.coords;
-
-            var gMap = document.querySelector('google-map');
+            gMap.latitude     = crd.latitude;
+            gMap.longitude    = crd.longitude;
             gMap.fitToMarkers = true;
 
-            var start_lat = crd.latitude;
-            var start_long = crd.longitude;
+            gMap.hidden = false;
+            gMap.resize();
 
-            var start = start_lat + ',' + start_long;
-            var end = '48.2919872,4.0805841';
+            button.hidden        = true;
+            refreshButton.hidden = false;
+            spinner.active       = false;
 
-            document.querySelector('google-map-directions').map = gMap.map;
-            document.querySelector('google-map-directions').startAddress = start;
-            document.querySelector('google-map-directions').endAddress = end;
 
+//            var start_lat = crd.latitude;
+//            var start_long = crd.longitude;
+//
+//            var start = start_lat + ',' + start_long;
+//            var end = '48.2919872,4.0805841';
+//
+//            var gDirection = document.querySelector('google-map-directions');
+//
+//            gDirection.map = gMap.map;
+//            gDirection.startAddress = start;
+//            gDirection.endAddress = end;
+//
+//            var bar_choice = document.getElementById('bar_button');
+//
+//            bar_choice.addEventListener('click', function(){
+//                console.log('bite');
+//                var modalAlert = document.getElementById('modalAlert');
+//                modalAlert.toggle();
+//            });
         }
     });
 
 </script>
 
-
-<paper-drawer-panel>
-    <div drawer>
-        <paper-toolbar class="custom">
-            <div>What bar are you looking for ?</div>
-        </paper-toolbar>
+<!--<paper-button id="bar_button" raised >Berthom</paper-button>-->
 
 
-    </div>
+<paper-toolbar class="custom">
+    <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
+    <div class="title">Happly Hour</div>
+</paper-toolbar>
 
-    <div main>
-        <paper-spinner class="multi"></paper-spinner>
+<paper-button id="button_find_my_bar" raised>Find bars around me</paper-button>
 
-        <paper-toolbar class="custom">
-            <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
-            <div class="title">Happly Hour</div>
-        </paper-toolbar>
-
-        <paper-button id="button_find_my_bar" raised>For now, Find The Berthom <3 !</paper-button>
-
-        <google-map latitude="37.779" longitude="-122.3892" api-key="AIzaSyAMK9GqpUJOOGk6O2mjxKKQ7TTlfIJx_yQ"></google-map>
-        <google-map-directions start-address="" end-address="" travel-mode="WALKING"
-                               api-key="AIzaSyAMK9GqpUJOOGk6O2mjxKKQ7TTlfIJx_yQ"></google-map-directions>
+<paper-spinner class="multi"></paper-spinner>
 
 
-        <paper-toast id="toast1" duration="" text=""></paper-toast>
+<google-map latitude="37.779" longitude="-122.3892" api-key="AIzaSyAMK9GqpUJOOGk6O2mjxKKQ7TTlfIJx_yQ">
+    <paper-fab id="refreshButton" icon="refresh" title="heart"></paper-fab>
+</google-map>
 
-    </div>
-</paper-drawer-panel>
+<google-map-directions start-address="" end-address="" travel-mode="WALKING"
+                       api-key="AIzaSyAMK9GqpUJOOGk6O2mjxKKQ7TTlfIJx_yQ"></google-map-directions>
+
+
+<paper-toast id="toast1" duration="" text=""></paper-toast>
 
 <!--Api key for android-->
 <!--<google-map disable-default-ui zoom="15" api-key="AIzaSyBu3FBIDdMOjJqRhZCvBQFPvGCiFL1qPzktype">-->
